Fix arrow wrapping

--- a/assets/css/_post.css
+++ b/assets/css/_post.css
@@ -26,6 +26,7 @@
 
 .link-post .link-arrow  {
   font-weight: 400;
+  text-wrap: nowrap;
 }
 
 .post-meta {
